# furigana

./: .gitignore  README.md  furigana.py  pyproject.toml  requirements.txt  run_furigana.py  test_async_skfurigana.py  test_skfurigana.py
skfurigana/: __init__.py  chat_assistant_provider.py  furigana.py
