[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "skfurigana"
version = "0.1.5"
description = "日本語テキストにふりがなを付与するツール"
authors = [
    { name="sugarkwork" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "fugashi[unidic]",
    "unidic",
    "skpmem",
    "json_repair",
    "chat_assistant"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: Japanese"
]
[project.urls]
Homepage = "https://github.com/sugarkwork/furigana"